<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">聚健康</string>
    <string name="menu_settings">设置</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_conversation">一键呼叫</string>
    <string name="main_tab_user">我的</string>
    
    <string name="main_tab_inquiry">问诊</string>
    <string name="main_tab_reserve">预约</string>
    <string name="home_region_default">选择小区</string>
    <string name="home_caption">聚健康</string>
    <string name="search_disease">搜索疾病</string>
    <string name="search_tip">医生/预约/优惠</string>
    <string name="reserve_examination">预约体检</string>
    <string name="reserve_doctor">预约就诊</string>
    <string name="news_caption">最新医讯</string>
    <string name="hot_recommend">热门推荐</string>
    <string name="user_name_default">点击登录</string>
    <string name="family_input_relation">关  系</string>
    <string name="family_input_name">姓  名</string>
    <string name="family_input_idnumber">身份证</string>
    <string name="family_input_birthday">出生年月</string>
    <string name="family_input_phone">手机号码</string>
    <string name="family_confirm">确认</string>
    <string name="familydialog_label_relation">关系类型</string>
    <string name="familydialog_label_phone">手机号码</string>
    <string name="familyedit_label_title">添加家庭成员</string>
    <string name="login_text_phone">请输入手机号码</string>
    <string name="login_text_code">请输入验证码</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_wallet_description">银行卡、会员卡等 </string>
    <string name="account_left">账户余额</string>
    <string name="account_red_packet">红包</string>
    <string name="account_points">积分</string>
    <string name="account_bank_card">银行卡</string>
    
	<string name="mute">Mute</string>
    <string name="Hands_free">Hands free</string>
    <string name="hang_up">Hang up</string>
    <string name="answer">Answer</string>
</resources>
