<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" 
	android:orientation="vertical"
	android:background="@color/white">
	<TextView 
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/lightgrey"/>
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="80dp"
	    android:id="@+id/user_my_wallet"
	    android:clickable="true">
	    <ImageView
	        android:id="@+id/my_wallet_icon"
	        android:layout_width="34dp"
	        android:layout_height="34dp"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginBottom="6dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="6dp"
	        android:layout_marginTop="6dp"
	        android:src="@drawable/user_icon_packet" />
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_gravity="center_vertical"
		    android:layout_toRightOf="@id/my_wallet_icon"
		    android:orientation="horizontal" >
			<TextView
			    android:id="@+id/my_wallet"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_centerVertical="true"
			    android:gravity="center_vertical"
			    android:text="@string/my_wallet"
	            android:textSize="16sp"
			    android:paddingLeft="4dp" />
			<TextView
			    android:id="@+id/my_wallet_entry"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
	        	android:layout_marginRight="20dp"			    
	        	android:gravity="center_vertical"
	            android:text="@string/my_wallet_description"
	            android:drawableRight="@drawable/arrow"
	            android:textSize="15sp"
	            android:textColor="@color/grey"
			    android:paddingLeft="4dp" />
		</RelativeLayout>
	</RelativeLayout>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgrey"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="80dp"
	    android:layout_gravity="center_vertical"
	    android:orientation="horizontal">
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="60dp"
	        android:layout_weight="1"
	        android:layout_gravity="center"
	        android:orientation="vertical"
	        android:id="@+id/account_left">
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:id="@+id/account_left_num"
	            android:gravity="center"
	            android:text="0.00"
	            android:textSize="15sp"/>
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/account_left"
	            android:gravity="center"
	            android:textSize="15sp"
	            android:textColor="@color/grey"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="60dp"
	        android:layout_weight="1"
	        android:layout_gravity="center"
	        android:orientation="vertical"
	        android:id="@+id/account_packet">
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:id="@+id/account_packet_num"
	            android:gravity="center"
	            android:text="0个"
	            android:textSize="15sp"/>
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/account_red_packet"
	            android:gravity="center"
	            android:textSize="15sp"
	            android:textColor="@color/grey"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="60dp"
	        android:layout_weight="1"
	        android:layout_gravity="center"
	        android:orientation="vertical"
	        android:id="@+id/account_point">
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:id="@+id/account_point_num"
	            android:gravity="center_horizontal"
	            android:text="0分"
	            android:textSize="15sp"/>
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/account_points"
	            android:gravity="center"
	            android:textSize="15sp"
	            android:textColor="@color/grey"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="60dp"
	        android:layout_weight="1"
	        android:layout_gravity="center"
	        android:orientation="vertical"
	        android:id="@+id/account_bank">
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:id="@+id/account_bank_card_num"
	            android:gravity="center"
	            android:text="0张"
	            android:textSize="15sp"/>
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/account_bank_card"
	            android:gravity="center_horizontal"
	            android:textSize="15sp"
	            android:textColor="@color/grey"/>
	    </LinearLayout>
	</LinearLayout>
	<TextView 
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/lightgrey"/>
</LinearLayout>