<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
	android:background="@color/lightgrey">
	<RelativeLayout
		android:id="@+id/familyedit_layout_head"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_alignParentTop="true"
		android:background="@drawable/topbar" >
        <TextView
            android:id="@+id/familyedit_label_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textColor="#ffffffff"
            android:textSize="18sp" />
	</RelativeLayout>
	<LinearLayout
	    android:id="@+id/familyedit_layout_tab"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/familyedit_layout_head"
	    android:background="@color/white"
	    android:gravity="center"
	    android:orientation="horizontal" >
		<Button
			android:id="@+id/familyedit_button_relation"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:background="@color/white"
            android:text="手机添加"
            android:layout_weight="1" />
		<Button
			android:id="@+id/familyedit_button_owner"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@color/lightgrey"
            android:text="证件添加"
            android:layout_weight="1" />
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/familyedit_list"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/familyedit_layout_tab"
	    android:gravity="center"
		android:background="@color/white"
	    android:orientation="vertical">
		<RelativeLayout
	    	android:id="@+id/familyedit_item_relation"
		    android:layout_width="match_parent"
			android:layout_height="50dp"
	        android:orientation="horizontal"
			android:layout_weight="1">
			<TextView
			    android:id="@+id/familyedit_label_relation"
			    android:layout_width="100dp"
			    android:layout_height="36dp"
			    android:layout_alignParentLeft="true"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="0dp"
			    android:gravity="center_vertical"
			    android:paddingLeft="20dp"
			    android:text="@string/family_input_relation"
			    android:textColor="@color/midgrey"
			    android:textSize="20sp" />
			<EditText
			    android:id="@+id/familyedit_text_relation"
			    android:layout_width="fill_parent"
			    android:layout_height="36dp"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="20dp"
			    android:layout_toRightOf="@id/familyedit_label_relation"
			    android:cursorVisible="true"
			    android:inputType="text"
			    android:paddingLeft="20dp"
			    android:singleLine="true"
			    android:textColor="@color/black"
			    android:textSize="18sp" />
		</RelativeLayout>
		<ImageView 
	        android:id="@+id/familyedit_divide1"
			android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_centerHorizontal="true"
			android:background="@drawable/divider">
		</ImageView>
		<RelativeLayout
	    	android:id="@+id/familyedit_item_name"
		    android:layout_width="match_parent"
			android:layout_height="50dp"
	        android:orientation="horizontal"
			android:layout_weight="1">
			<TextView
			    android:id="@+id/familyedit_label_name"
			    android:layout_width="100dp"
			    android:layout_height="36dp"
			    android:layout_alignParentLeft="true"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="0dp"
			    android:gravity="center_vertical"
			    android:paddingLeft="20dp"
			    android:text="@string/family_input_name"
			    android:textColor="@color/midgrey"
			    android:textSize="20sp" />
			<EditText
			    android:id="@+id/familyedit_text_name"
			    android:layout_width="fill_parent"
			    android:layout_height="36dp"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="20dp"
			    android:layout_toRightOf="@id/familyedit_label_name"
            	android:cursorVisible="true"
			    android:inputType="text"
			    android:paddingLeft="20dp"
			    android:singleLine="true"
			    android:textColor="@color/black"
			    android:textSize="18sp" />
		</RelativeLayout>
		<ImageView 
	        android:id="@+id/familyedit_divide2"
			android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_centerHorizontal="true"
			android:background="@drawable/divider">
		</ImageView>
		<RelativeLayout
	    	android:id="@+id/familyedit_item_idnumber"
		    android:layout_width="match_parent"
			android:layout_height="50dp"
	        android:orientation="horizontal"
			android:layout_weight="1">
			<TextView
			    android:id="@+id/familyedit_label_idnumber"
			    android:layout_width="100dp"
			    android:layout_height="36dp"
			    android:layout_alignParentLeft="true"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="0dp"
			    android:gravity="center_vertical"
			    android:paddingLeft="20dp"
			    android:text="@string/family_input_idnumber"
			    android:textColor="@color/midgrey"
			    android:textSize="20sp" />

			<EditText
			    android:id="@+id/familyedit_text_idnumber"
			    android:layout_width="fill_parent"
			    android:layout_height="36dp"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="20dp"
			    android:layout_toRightOf="@id/familyedit_label_idnumber"
			    android:cursorVisible="true"
			    android:inputType="number"
			    android:paddingLeft="20dp"
			    android:singleLine="true"
			    android:textColor="@color/black"
			    android:textSize="18sp" />
		</RelativeLayout>
		<ImageView 
	        android:id="@+id/familyedit_divide3"
			android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_centerHorizontal="true"
			android:background="@drawable/divider">
		</ImageView>
		<RelativeLayout
	    	android:id="@+id/familyedit_item_birthday"
		    android:layout_width="match_parent"
			android:layout_height="50dp"
	        android:orientation="horizontal"
			android:layout_weight="1">
			<TextView
			    android:id="@+id/familyedit_label_birthday"
			    android:layout_width="100dp"
			    android:layout_height="36dp"
			    android:layout_alignParentLeft="true"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="0dp"
			    android:gravity="center_vertical"
			    android:paddingLeft="20dp"
			    android:text="@string/family_input_birthday"
			    android:textColor="@color/midgrey"
			    android:textSize="20sp" />
			<EditText
			    android:id="@+id/familyedit_text_birthday"
			    android:layout_width="fill_parent"
			    android:layout_height="36dp"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="20dp"
			    android:layout_toRightOf="@id/familyedit_label_birthday"
            	android:cursorVisible="true"
			    android:paddingLeft="20dp"
			    android:singleLine="true"
			    android:inputType="date"
			    android:textColor="@color/black"
			    android:textSize="18sp" />
		</RelativeLayout>
		<ImageView 
	        android:id="@+id/familyedit_divide4"
			android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_centerHorizontal="true"
			android:background="@drawable/divider">
		</ImageView>
		<RelativeLayout
	    	android:id="@+id/familyedit_item_phone"
		    android:layout_width="match_parent"
			android:layout_height="50dp"
	        android:orientation="horizontal"
			android:layout_weight="1">
			<TextView
			    android:id="@+id/familyedit_label_phone"
			    android:layout_width="100dp"
			    android:layout_height="36dp"
			    android:layout_alignParentLeft="true"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="0dp"
			    android:gravity="center_vertical"
			    android:paddingLeft="20dp"
			    android:text="@string/family_input_phone"
			    android:textColor="@color/midgrey"
			    android:textSize="20sp" />
			<EditText
			    android:id="@+id/familyedit_text_phone"
			    android:layout_width="fill_parent"
			    android:layout_height="36dp"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="20dp"
			    android:layout_toRightOf="@id/familyedit_label_phone"
            	android:cursorVisible="true"
			    android:inputType="text"
			    android:paddingLeft="20dp"
			    android:singleLine="true"
			    android:textColor="@color/black"
			    android:textSize="18sp" />
		</RelativeLayout>
	</LinearLayout>
	<Button
	    android:id="@+id/familyedit_button_confirm"
	    android:layout_width="240dp"
	    android:layout_height="46dp"
	    android:layout_below="@id/familyedit_list"
	    android:layout_centerHorizontal="true"
		android:layout_marginTop="20dp"
	    android:background="@drawable/button_common"
	    android:text="@string/family_confirm"
	    android:textColor="#ffffffff"
	    android:textSize="15sp" />
</RelativeLayout>
